refactor(entity): more concrete
