# docs/swagger.json
@@ -671,6 +671,38 @@
             }
         },
         "/me/scraps": {
+            "get": {
+                "security": [
+                    {
+                        "AccessTokenAuth": []
+                    }
+                ],
+                "description": "get all my scraps",
+                "tags": [
+                    "scraps"
+                ],
+                "summary": "get my scraps",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.scrapsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.errorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -922,6 +954,29 @@
                 "role": {
                     "type": "string"
                 },
+                "seq": {
+                    "description": "seq starts from 1",
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "internal.MessageWithScrap": {
+            "type": "object",
+            "properties": {
+                "chatID": {
+                    "type": "string",
+                    "example": "Hjejwerhj"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
                 "scrap": {
                     "$ref": "#/definitions/internal.Scrap"
                 },
@@ -933,6 +988,23 @@
             }
         },
         "internal.Scrap": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string",
+                    "example": "2021-01-01T00:00:00Z"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "Hjejwerhj"
+                },
+                "memo": {
+                    "type": "string",
+                    "example": "hello"
+                }
+            }
+        },
+        "internal.ScrapWithMessage": {
             "type": "object",
             "properties": {
                 "createdAt": {
@@ -1040,7 +1112,7 @@
                 "messages": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/internal.Message"
+                        "$ref": "#/definitions/internal.MessageWithScrap"
                     }
                 }
             }
@@ -1096,7 +1168,7 @@
                 "scraps": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/internal.Scrap"
+                        "$ref": "#/definitions/internal.ScrapWithMessage"
                     }
                 }
             }
